tests/expectations/compiler/finalize/mapping_fail.out
Error [ETYC0372031]: A mapping's key cannot be a tuple
    --> compiler-test:3:5
     |
   3 |     mapping foo: (u32, u32) => u32;
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372017]: The type `test.aleo/baz` is not found in the current scope.
    --> compiler-test:5:5
     |
   5 |     mapping floo: baz => u8;
     |     ^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo/credits` instead of `credits`
Error [ETYC0372017]: The type `test.aleo/baz` is not found in the current scope.
    --> compiler-test:5:5
     |
   5 |     mapping floo: baz => u8;
     |     ^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo/credits` instead of `credits`
Error [ETYC0372017]: The type `test.aleo/foo` is not found in the current scope.
    --> compiler-test:7:5
     |
   7 |     mapping floop: foo => foo;
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo/credits` instead of `credits`
Error [ETYC0372017]: The type `test.aleo/foo` is not found in the current scope.
    --> compiler-test:7:5
     |
   7 |     mapping floop: foo => foo;
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo/credits` instead of `credits`
Error [ETYC0372017]: The type `test.aleo/foo` is not found in the current scope.
    --> compiler-test:7:5
     |
   7 |     mapping floop: foo => foo;
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo/credits` instead of `credits`
Error [ETYC0372017]: The type `test.aleo/foo` is not found in the current scope.
    --> compiler-test:7:5
     |
   7 |     mapping floop: foo => foo;
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo/credits` instead of `credits`
Error [ETYC0372017]: The type `test.aleo/foo` is not found in the current scope.
    --> compiler-test:9:5
     |
   9 |     mapping bar: foo => baz;
     |     ^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo/credits` instead of `credits`
Error [ETYC0372017]: The type `test.aleo/foo` is not found in the current scope.
    --> compiler-test:9:5
     |
   9 |     mapping bar: foo => baz;
     |     ^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo/credits` instead of `credits`
Error [ETYC0372017]: The type `test.aleo/baz` is not found in the current scope.
    --> compiler-test:9:5
     |
   9 |     mapping bar: foo => baz;
     |     ^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo/credits` instead of `credits`
Error [ETYC0372017]: The type `test.aleo/baz` is not found in the current scope.
    --> compiler-test:9:5
     |
   9 |     mapping bar: foo => baz;
     |     ^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo/credits` instead of `credits`
Error [ETYC0372031]: A mapping's value cannot be a record
    --> compiler-test:18:5
     |
  18 |     mapping real_tokens: address => RealToken;
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372031]: A mapping's key cannot be a record
    --> compiler-test:20:5
     |
  20 |     mapping owners: RealToken => address;
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372083]: A program must have at least one entry point fn.
    --> compiler-test:2:9
     |
   2 | program test.aleo {
     |         ^^^^^^^^^
